// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChildrenWrapper /> should render content correctly 1`] = `
<span
  class="ChildrenWrapper-sc-30uoyc-0 kEyivn"
>
  content
</span>
`;

exports[`<ChildrenWrapper /> should render correctly 1`] = `
<span
  class="ChildrenWrapper-sc-30uoyc-0 kEyivn"
/>
`;
